--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -111,7 +111,7 @@
     "title": "Contributions",
     "contributions": [
       {
-        "src": "/src/images/contributions/advanced-periodontics.jpg",
+        "src": "/src/images/contributions/pexels-photo-3183171.jpg",
         "alt": "Advanced Periodontics",
         "title": "Advanced Periodontics",
         "description": "In collaboration with a marketing agency in Texas, United States. I worked on the creation of the website for the Advanced Periodontics & Dental Implants clinic.",
@@ -127,7 +127,7 @@
         "commits": "#"
       },
       {
-        "src": "/src/images/contributions/advanced-periodontics.jpg",
+        "src": "/src/images/contributions/pexels-photo-3183171.jpg",
         "alt": "Advanced Periodontics",
         "title": "Advanced Periodontics",
         "description": "In collaboration with a marketing agency in Texas, United States. I worked on the creation of the website for the Advanced Periodontics & Dental Implants clinic.",
@@ -143,7 +143,7 @@
         "commits": "#"
       },
       {
-        "src": "/src/images/contributions/advanced-periodontics.jpg",
+        "src": "/src/images/contributions/pexels-photo-3183171.jpg",
         "alt": "Advanced Periodontics",
         "title": "Advanced Periodontics",
         "description": "In collaboration with a marketing agency in Texas, United States. I worked on the creation of the website for the Advanced Periodontics & Dental Implants clinic.",
@@ -162,7 +162,7 @@
   },
   "about": {
     "title": "About me",
-    "subtitle": "I'm a Czer0C a web developer enthusiast with an obsession with automation ",
+    "subtitle": "I'm a web developer enthusiast with an obsession about automation the tedious tasks.",
     "description": "Experienced Full-Stack Developer with a strong background in modern web frameworks, backend technologies, cloud platforms, and DevOps. Passionate about building scalable applications with a focus on performance, security, and SEO optimization. Adept at working with microservices, event-driven architectures, and cloud infrastructure. Side hobby as a blogger and content creator with high emphasis on styling and intergrity."
   },
   "contact": {
