--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -1,6 +1,6 @@
 {
-  "title": "Fullstack Developer",
-  "description": "Driven to craft scalable, high-performance apps with robust security, SEO, and cost-efficient solutions, leveraging reverse-engineering, microservices and cloud infrastructure.",
+  "title": "Czer0C",
+  "description": "Personal Portfolio and Occasional Tech Blog",
   "navbar": [
     {
       "label": "Home",
