--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -94,7 +94,7 @@
           "TailwindCSS"
         ],
         "code": "Code",
-        "link": "https://cloudflare-shortlink.vercel.app/",
+        "link": "https://www.czer0c.top",
         "preview": "Visit"
       },
       {
