--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -280,7 +280,7 @@
   "about": {
     "title": "About me",
     "subtitle": "I'm a web developer enthusiast with an obsession about automation the tedious tasks.",
-    "description": "Experienced Full-Stack Developer with a strong background in modern web and backend technologies, cloud platforms, and CI/CD. Passionate about building scalable applications with a focus on performance, security, and SEO optimization. Adept at working with microservices, reverse-engineering, event-driven architectures, and cloud infrastructure. Side hobby as a blogger and content creator with high emphasis on styling and intergrity."
+    "description": "Experienced Full-Stack Developer with a strong background in modern web and backend technologies, cloud platforms, and CI/CD. Passionate about building scalable applications focusing on performance, security, and SEO optimization. Adept at working with microservices, reverse-engineering, event-driven architectures, and cloud infrastructure. Side hobby as a blogger and content creator with a high emphasis on styling and integrity."
   },
   "contact": {
     "title": "Interested in working together?",
